# SumUpPDF

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
api/: main.py
docker/: Dockerfile
docs/: PRODUCT.md
nlp/language_detection/: base.py  llm_detector.py  mapping.py  model.py  ngram.py  service.py  train.py  transformer.py  unicode_detector.py
ocr/paddle/: pdf_utils.py  pipeline.py  postprocess.py  preprocess.py  preview.py  reader.py
ocr/test/: test_pipeline.py
ui/src/: App.jsx
